# GRAIL

./: .gitignore  CLAUDE.md  CONTRIBUTING.es.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  init_context.md  pyproject.toml  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-inference-provider.yml  02-multimodal.yml  03-agentic-logic.yml  04-search-method.yml  05-indexing-method.yml  06-vector-store.yml  07-cloud-integration.yml  08-library-addition.yml  09-visual-app.yml  config.yml
.github/workflows/: docs.yml  publish.yml
benchmark_laws/: grail.yaml
benchmark_laws/.grail/: chat.db
benchmark_laws/faiss/: entity_descriptions.faiss
benchmark_laws/input/_processed/: Decreto-54_24-OCT-2015.md  LEY-19966_03-SEP-2004.md  Ley-20850_06-JUN-2015.md
benchmarks/: judge_prompt.py  rag_baseline.py  run_benchmark.py
benchmarks/results/: README.md
benchmarks/results/2026-05-22T17-15-36Z/: report.md  responses.json
benchmarks/results/2026-05-23T23-38-42Z/: report.md
benchmarks/results/en/: batch1_q01_q10_report.html  batch2_q11_q20_report.html  batch3_q21_q30_report.html  final_benchmark_report.html
benchmarks/results/es/: reporte_final_benchmark.html
benchmarks/simple_benchmark/: benchmark.json
configs/: community.yaml  embeddings.yaml  endpoints.yaml  grail.yaml  indexing.yaml  llm.yaml  prompts.yaml  reranker.yaml  search.yaml  storage.yaml  vectorstore.yaml
configs/templates/: README.md
configs/templates/low_cost_setup/: community.yaml  embeddings.yaml  endpoints.yaml  grail.yaml  indexing.yaml  llm.yaml  prompts.yaml  reranker.yaml  search.yaml  storage.yaml  vectorstore.yaml
dev_prompts/: prompt_agent_skills_dev.md  prompt_grail_agentic_memory_design.md  prompt_grail_benchmark.md  prompt_grail_logo.md  prompt_grail_skill_design.md  prompt_grail_ui_dev.md  prompt_grail_viz_d3.md  prompt_graphrag_bench.md
docs/: benchmarks.md  cli_chat.md  comparison.md  config.md  getting-started.md  glossary.md  incremental_pipeline.md  indexing.md  llm.md  preprocessing.md  prompt_customization.md  prompts.md  python_api.md  query.md  release_planning.md  releasing.md  reranker.md  search_modes.md  storage.md  ui_frontend_analysis.md  vectorstores.md  viz.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json  vercel.json
docs-site/docs/cookbook/: index.mdx  pdf-corpus-qa-bot.mdx
docs-site/docs/guides/: cli-chat.mdx  cost-optimization.mdx  index.mdx  prompt-tuning.mdx  query-tracing.mdx  visualization.mdx  web-chat.mdx
docs-site/docs/learn/: cascade.mdx  communities-leiden.mdx  cost-tracking.mdx  knowledge-graphs-in-5-min.mdx  memory-model.mdx  search-modes.mdx  two-modes.mdx  what-is-grail.mdx
docs-site/docs/reference/: cli.mdx  python-sdk.mdx
docs-site/docs/start/: install.mdx  kb-quickstart.mdx  memory-quickstart.mdx  skill-quickstart.mdx
docs-site/src/css/: custom.css
docs-site/src/lib/: locale.ts
docs-site/src/pages/: index.tsx
docs-site/src/theme/: MDXComponents.tsx
docs/model_selection/: README.md  report.md
examples/memory_quickstart/: quickstart.py
examples/quickstart/: .env.example  grail.yaml  graph.html  quickstart.py
examples/quickstart/.grail/: chat.db
examples/quickstart/traces/: trace_agent.md  trace_agent_2026-05-22T00-39-46.json  trace_document.md  trace_document_2026-05-22T00-38-31.json  trace_global.md  trace_global_2026-05-22T00-37-36.json  trace_local.md  trace_local_2026-05-22T00-37-13.json
examples/quickstart/traces_v2/: trace_global_2026-05-22T02-06-01.json  trace_local_2026-05-22T02-05-06.json
grail/: __init__.py  _version.py  config.py  core.py  schemas.py
grail/apps/chat/: auth.py  database.py  schemas.py  server.py
grail/apps/cli_chat/: __init__.py  app.py  commands.py  reporter.py  widgets.py
grail/cli/: __init__.py  banner.py  main.py
grail/export/: __init__.py  neo4j.py
grail/indexing/: __init__.py  communities.py  community_reports.py  entities_relationships.py  entity_dedup.py  incremental_community.py  leiden.py  loader.py  preprocess.py  run_manifest.py  schema_migration.py  stable_lcc.py  summarize_descriptions.py
grail/llm/: __init__.py  cache.py  cost.py  embeddings.py  providers.py  reranker.py  wrapper.py
grail/memory/: __init__.py  _merge.py  consolidate.py  identity.py  observation.py  project.py  proposals.py  types.py
grail/memory/analyses/: __init__.py  alias_detect.py  edge_density.py  folder_split.py  membership.py
grail/prompts/: __init__.py  loader.py
grail/prompts/builtin/: __init__.py  claim_extraction.py  community_report.py  (+8 more)
grail/query/: __init__.py  agent.py  cascade_search.py  document_search.py  global_search.py  local_search.py  recall_filter.py  recall_search.py  retrieval.py  trace.py
grail/reporting/: __init__.py  rich_reporter.py
grail/storage/: __init__.py  base.py  local.py  s3.py
grail/utils/: __init__.py  chunker.py  ids.py  text.py  tokens.py  zip.py
grail/vectorstores/: __init__.py  base.py  chroma.py  faiss.py  lancedb.py
grail/viz/: __init__.py  builder.py  colors.py  exporter.py  layout.py  sampling.py  template.py
notebooks/: explore_grail.ipynb  graph_exploration.ipynb
skills/grail/: INSTALL.md  SKILL.md  requirements.txt
tests/: test_cascade_vs_rag.py  test_graph_search.py  test_multipath_rrf.py
tests/integration/: test_grail_exploration.py
tests/unit/: test_benchmark.py  test_chunker.py  test_cli_chat.py  test_cli_init_modes.py  test_cli_mode_validation.py  test_cli_proposals.py  test_community_filtering.py  test_config.py  test_cost.py  test_frontmatter_loader.py  test_llm_wrapper.py  test_loader.py  test_memory_meta_json.py  test_memory_multi_community.py  test_memory_no_llm.py  test_memory_project_crud.py  test_memory_warnings.py  test_preprocess.py  test_prompts.py  test_proposals_apply.py  test_proposals_generation.py  test_proposals_special_cases.py  test_recall_filter.py  test_recall_search.py  test_reranker.py  test_run_manifest.py  test_schema_migration.py  test_schemas.py  test_storage.py  test_trace.py  test_vectorstores.py  test_viz.py
(+130 files in other folders)
