[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "grail"
version = "0.1.0"
description = "Graph RAG with Advanced Integration and Learning — an open-source GraphRAG library with incremental updates, file-level provenance, and pluggable LLM/storage backends."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Benjamin González Guerrero", email = "ben@nirvana-ai.com" },
]
keywords = ["graphrag", "rag", "knowledge-graph", "retrieval", "llm", "leiden"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.40,<2",
    "pydantic>=2.5,<3",
    "tenacity>=8.2",
    "pyarrow>=14",
    "pandas>=2.0",
    "lancedb>=0.10",
    "networkx>=3.2",
    "graspologic>=3.4",
    "rich>=13",
    "tiktoken>=0.7",
    "pyyaml>=6",
    "typer>=0.12",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    # Document preprocessors. Both are pure-Python, small footprint.
    # pypdf parses PDFs (text-only; OCR for image-only pages is a future [vision] extra).
    # python-docx reads DOCX paragraphs + tables; no Java/Node binary dependency.
    "pypdf>=5.0",
    "python-docx>=1.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34", "aioboto3>=12"]
rerank = ["sentence-transformers>=2.7"]
notebook = [
    "pyvis>=0.3.2",
    "matplotlib>=3.8",
    "ipywidgets>=8.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
grail = "grail.cli.main:app"

[project.urls]
Repository = "https://github.com/CAMARA-CHILENA-INTELIGENCIA-ARTIFICIAL/GRAIL"

[tool.hatch.build.targets.wheel]
packages = ["grail"]

[tool.hatch.build.targets.sdist]
include = ["grail", "configs", "docs", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501"]
