[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
# PyPI distribution name. The ``grail`` name on PyPI is taken by an
# unrelated test-script framework, so we publish under ``graphgrail``.
# The Python import name stays ``grail`` (``from grail import GRAIL``)
# and the CLI binary stays ``grail`` — only the ``pip install`` /
# ``uv add`` line uses the distribution name.
name = "graphgrail"
version = "0.1.4"
description = "Graph RAG with Advanced Integration and Learning — an open-source GraphRAG library with incremental updates, file-level provenance, and pluggable LLM/storage backends."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Benjamin González Guerrero", email = "ben@nirvana-ai.com" },
]
keywords = ["graphrag", "rag", "knowledge-graph", "retrieval", "llm", "leiden", "agentic-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.40,<2",
    "pydantic>=2.5,<3",
    "tenacity>=8.2",
    "pyarrow>=14",
    "pandas>=2.0",
    "lancedb>=0.10",
    "networkx>=3.2",
    "graspologic>=3.4",
    "rich>=13",
    "textual>=0.50",
    "aiosqlite>=0.20",
    "tiktoken>=0.7",
    "pyyaml>=6",
    "typer>=0.12",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    # Document preprocessors. Both are pure-Python, small footprint.
    # pypdf parses PDFs (text-only; OCR for image-only pages is a future [vision] extra).
    # python-docx reads DOCX paragraphs + tables; no Java/Node binary dependency.
    "pypdf>=5.0",
    "python-docx>=1.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
chroma = ["chromadb>=0.5"]
s3 = ["boto3>=1.34", "aioboto3>=12"]
rerank = ["sentence-transformers>=2.7"]
ui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "sse-starlette>=2.0",
    "bcrypt==4.0.1",
]
notebook = [
    "pyvis>=0.3.2",
    "matplotlib>=3.8",
    "ipywidgets>=8.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
grail = "grail.cli.main:app"

[project.urls]
Homepage = "https://github.com/CAMARA-CHILENA-INTELIGENCIA-ARTIFICIAL/GRAIL"
Repository = "https://github.com/CAMARA-CHILENA-INTELIGENCIA-ARTIFICIAL/GRAIL"
Documentation = "https://github.com/CAMARA-CHILENA-INTELIGENCIA-ARTIFICIAL/GRAIL/tree/master/docs"
Issues = "https://github.com/CAMARA-CHILENA-INTELIGENCIA-ARTIFICIAL/GRAIL/issues"
Changelog = "https://github.com/CAMARA-CHILENA-INTELIGENCIA-ARTIFICIAL/GRAIL/releases"

[tool.hatch.build.targets.wheel]
packages = ["grail"]

[tool.hatch.build.targets.sdist]
include = ["grail", "configs", "docs", "pyproject.toml", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501"]
